--- a/Folio/index.html
+++ b/Folio/index.html
@@ -29,7 +29,7 @@
   <link href="css/responsive.css" rel="stylesheet">
 
   <!-- Favicon -->
-  <link rel="shortcut icon" href="images/favicon.png">
+  <link rel="shortcut icon" href="images/favicon (1).ico">
 
   <!-- =======================================================
     Theme Name: Folio
@@ -75,9 +75,9 @@
         <p>developer, Entrepreneur, Student</p>
 
         <ul class="list-unstyled list-social">
-          <li><a href="#"><i class="ion-social-facebook"></i></a></li>
-          <li><a href="#"><i class="ion-social-twitter"></i></a></li>
-          <li><a href="#"><i class="ion-social-linkedin"></i></a></li>
+          <!-- <li><a href="#"><i class="ion-social-facebook"></i></a></li> -->
+          <li><a href="https://github.com/qbnguyen"><i class="ion-social-github"></i></a></li>
+          <li><a href="https://www.linkedin.com/in/quybachnguyen"><i class="ion-social-linkedin"></i></a></li>
           <li><a href="#"><i class="ion-social-instagram"></i></a></li>
           <!-- <li><a href="#"><i class="ion-social-tumblr"></i></a></li>
           <li><a href="#"><i class="ion-social-dribbble"></i></a></li> -->
@@ -207,40 +207,42 @@
           <div class="portfolio-container">
 
             <div class="col-lg-4 col-md-6 portfolio-thumbnail all branding uikits webdesign">
-              <a class="popup-img" href="images/portfolio/1.jpg">
-                <img src="images/portfolio/1.jpg" alt="img">
-              </a>
-            </div>
-
-            <div class="col-lg-4 col-md-6 portfolio-thumbnail all mockups uikits photography">
-              <a class="popup-img" href="images/portfolio/2.jpg">
-                <img src="images/portfolio/2.jpg"  alt="img">
-              </a>
-            </div>
-
-            <div class="col-lg-4 col-md-6 portfolio-thumbnail all branding webdesig photographyn">
-              <a class="popup-img" href="images/portfolio/3.jpg">
-                <img src="images/portfolio/3.jpg" alt="img">
-              </a>
-            </div>
-
-            <div class="col-lg-4 col-md-6 portfolio-thumbnail all mockups webdesign photography">
-              <a class="popup-img" href="images/portfolio/4.jpg">
-                <img src="images/portfolio/4.jpg" alt="img">
-              </a>
-            </div>
-
-            <div class="col-lg-4 col-md-6 portfolio-thumbnail all branding uikits photography">
-              <a class="popup-img" href="images/portfolio/5.jpg">
-                <img src="images/portfolio/5.jpg" alt="img">
+              <a class="link" href="https://raianazaman.github.io/project/">
+                <img src="images/Screen Shot 2018-09-27 at 9.33.55 PM.png" alt="img">
               </a>
             </div>
 
             <div class="col-lg-4 col-md-6 portfolio-thumbnail all mockups uikits webdesign">
-              <a class="popup-img" href="images/portfolio/6.jpg">
-                <img src="images/portfolio/6.jpg" alt="img">
+              <a class="link" href=" https://qbnguyen.github.io/GIPHY-API/">
+                <img src="images/Screen Shot 2018-09-27 at 9.46.12 PM.png"  alt="img">
               </a>
             </div>
+
+            <div class="col-lg-4 col-md-6 portfolio-thumbnail all mockups uikits webdesign">
+              <a class="link" href="https://qbnguyen.github.io/Firebase-TrainScheduler/">
+                <img src="images/Screen Shot 2018-09-27 at 9.51.35 PM.png" alt="img">
+              </a>
+            </div>
+
+            <div class="col-lg-4 col-md-6 portfolio-thumbnail all branding uikits photography">
+              <a class="popup-img" href="images/IMG_0726.jpg">
+                <img src="images/IMG_0726.jpg" alt="img">
+              </a>
+            </div>
+
+            <div class="col-lg-4 col-md-6 portfolio-thumbnail all mockups uikits photography">
+              <a class="popup-img" href="images/IMG_0549.jpg">
+                <img src="images/IMG_0549.jpg" alt="img">
+              </a>
+            </div>
+
+            <div class="col-lg-4 col-md-6 portfolio-thumbnail all branding uikits photography">
+              <a class="popup-img" href="images/IMG_0565.jpg">
+                <img src="images/IMG_0565.jpg" alt="img">
+              </a>
+            </div>
+
+            
 
           </div>
         </div>
@@ -329,7 +331,7 @@
           <div class="col-lg-6">
             <div class="contact-contact">
 
-              <h2 class="mb-30">GET IN TOUCH</h2>
+              <h2 class="mb-30">LET'S CONNECT</h2>
 
               <ul class="contact-details">
                 <li><span>1300 Tribute Center Dr</span></li>
@@ -396,10 +398,10 @@
       <div class="socials-media text-center">
 
         <ul class="list-unstyled">
-          <li><a href="#"><i class="ion-social-facebook"></i></a></li>
-          <li><a href="#"><i class="ion-social-twitter"></i></a></li>
+          <!-- <li><a href="#"><i class="ion-social-facebook"></i></a></li> -->
+          <li><a href="https://github.com/qbnguyen"><i class="ion-social-github"></i></a></li>
           <li><a href="#"><i class="ion-social-instagram"></i></a></li>
-          <li><a href="#"><i class="ion-social-linkedin"></i></a></li>
+          <li><a href="https://www.linkedin.com/in/quybachnguyen/"><i class="ion-social-linkedin"></i></a></li>
           <!-- <li><a href="#"><i class="ion-social-tumblr"></i></a></li>
           <li><a href="#"><i class="ion-social-dribbble"></i></a></li> -->
         </ul>
