--- a/index.html
+++ b/index.html
@@ -250,15 +250,15 @@
     </div>
 
   </div>
-  <!-- End section portfolio -->
+  <!-- End section portfolio
 
 
-  <!-- start section journal -->
-  <!-- <div id="journal" class="text-left paddsection">
+  start section journal -->
+  <div id="journal" class="text-left paddsection">
 
     <div class="container">
       <div class="section-title text-center">
-        <h2>journal</h2>
+        <h2>Blog</h2>
       </div>
     </div>
 
@@ -269,11 +269,11 @@
           <div class="col-lg-4 col-md-6">
             <div class="journal-info">
 
-              <a href="blog-single.html"><img src="images/blog-post-1.jpg" class="img-responsive" alt="img"></a>
+              <a href="https://medium.com/@nguyenqb24/tips-to-winning-a-gilman-scholarship-how-i-did-it-bf590bea7692"><img src="images/Screen Shot 2018-10-07 at 10.50.41 PM.png" class="img-responsive" alt="img"></a>
 
               <div class="journal-txt">
 
-                <h4><a href="blog-single.html">SO LETS MAKE THE MOST IS BEAUTIFUL</a></h4>
+                <h4><a href="https://medium.com/@nguyenqb24/tips-to-winning-a-gilman-scholarship-how-i-did-it-bf590bea7692">HOW TO WIN THE BENJAMIN GILMAN SCHOLARSHIP?</a></h4>
                 <p class="separator">To an English person, it will seem like simplified English
                 </p>
 
@@ -282,7 +282,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6">
+          <!-- <div class="col-lg-4 col-md-6">
             <div class="journal-info">
 
               <a href="blog-single.html"><img src="images/blog-post-2.jpg" class="img-responsive" alt="img"></a>
@@ -309,7 +309,7 @@
                 <p class="separator">To an English person, it will seem like simplified English
                 </p>
 
-              </div>
+              </div> -->
 
             </div>
           </div>
@@ -318,7 +318,7 @@
       </div>
     </div>
 
-  </div> -->
+  </div>
   <!-- End section journal -->
 
 
@@ -339,7 +339,7 @@
                 <li><span>+1(910)364-2985</span></li>
                 <li><span>nguyenqb24@gmail.com</span></li>
               </ul>
-
+              
             </div>
           </div>
 
