--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
               <div class="journal-txt">
 
                 <h4><a href="https://medium.com/@nguyenqb24/tips-to-winning-a-gilman-scholarship-how-i-did-it-bf590bea7692">HOW TO WIN THE BENJAMIN GILMAN SCHOLARSHIP?</a></h4>
-                <p class="separator">To an English person, it will seem like simplified English
+                <p class="separator">The scholarship that started my travel journey to Paris, France.
                 </p>
 
               </div>
