--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
 
     <div class="container">
       <div class="header-content">
-        <h1>I'm <span class="typed"></span></h1>
-        <p>developer, Entrepreneur, Student</p>
+        <h1> <span class="typed"></span></h1>
+        <p>Developer, Entrepreneur, Student</p>
 
         <ul class="list-unstyled list-social">
           <!-- <li><a href="#"><i class="ion-social-facebook"></i></a></li> -->
@@ -208,45 +208,60 @@
 
             <div class="col-lg-4 col-md-6 portfolio-thumbnail all branding uikits webdesign">
               <a class="link" href="https://raianazaman.github.io/project/">
-                <img src="images/Screen Shot 2018-09-27 at 9.33.55 PM.png" alt="img">
+                Tech Solution<img src="images/Screen Shot 2018-09-27 at 9.33.55 PM.png" alt="img">
               </a>
+              <a class="link" href="https://github.com/qbnguyen/project">Link to GitHub</a>
             </div>
+          
             <div class="col-lg-4 col-md-6 portfolio-thumbnail all branding uikits webdesign">
               <a class="link" href="http://desolate-hamlet-84600.herokuapp.com/">
-                <img src="images/Screen Shot 2018-11-18 at 10.56.36 PM.png" alt="img">
+                iDecide<img src="images/Screen Shot 2018-11-18 at 10.56.36 PM.png" alt="img">
               </a>
+              <a class="link" href="https://github.com/qbnguyen/TheCrimsonKnuckleRepo">Link to GitHub</a>
             </div>
             <div class="col-lg-4 col-md-6 portfolio-thumbnail all mockups uikits webdesign">
               <a class="link" href=" https://qbnguyen.github.io/GIPHY-API/">
-                <img src="images/Screen Shot 2018-09-27 at 9.46.12 PM.png"  alt="img">
+                GIPHY World<img src="images/Screen Shot 2018-09-27 at 9.46.12 PM.png"  alt="img">
               </a>
+              <a class="link" href="https://github.com/qbnguyen/GIPHY-API">Link to GitHub</a>
             </div>
 
             <div class="col-lg-4 col-md-6 portfolio-thumbnail all mockups uikits webdesign">
               <a class="link" href="https://qbnguyen.github.io/Firebase-TrainScheduler/">
-                <img src="images/Screen Shot 2018-09-27 at 9.51.35 PM.png" alt="img">
+                Train Scheduler<img src="images/Screen Shot 2018-09-27 at 9.51.35 PM.png" alt="img">
               </a>
+              <a class="link" href="https://github.com/qbnguyen/Firebase-TrainScheduler">Link to GitHub</a>
             </div>
 
             <div class="col-lg-4 col-md-6 portfolio-thumbnail all branding uikits photography">
               <a class="popup-img" href="images/IMG_0726.jpg">
-                <img src="images/IMG_0726.jpg" alt="img">
+                <img src="images/IMG_0726.jpg" alt="img">Venice, Italy
               </a>
             </div>
 
             <div class="col-lg-4 col-md-6 portfolio-thumbnail all mockups uikits photography">
               <a class="popup-img" href="images/IMG_0549.jpg">
-                <img src="images/IMG_0549.jpg" alt="img">
+                <img src="images/IMG_0549.jpg" alt="img">Singapore 
               </a>
             </div>
 
             <div class="col-lg-4 col-md-6 portfolio-thumbnail all branding uikits photography">
               <a class="popup-img" href="images/IMG_0565.jpg">
-                <img src="images/IMG_0565.jpg" alt="img">
+                <img src="images/IMG_0565.jpg" alt="img">Singapore
               </a>
             </div>
 
+            <div class="col-lg-4 col-md-6 portfolio-thumbnail all branding uikits photography">
+              <a class="popup-img" href="images/IMG_0882.JPG">
+                <img src="images/IMG_0882.JPG" alt="img">Cancun, Mexico
+              </a>
+            </div>
             
+            <div class="col-lg-4 col-md-6 portfolio-thumbnail all branding uikits photography">
+              <a class="popup-img" href="images/IMG_1245.JPG">
+                <img src="images/IMG_1245.JPG" alt="img">Bangkok, Thailand
+              </a>
+            </div>
 
           </div>
         </div>
@@ -279,6 +294,22 @@
 
                 <h4><a href="https://medium.com/@nguyenqb24/tips-to-winning-a-gilman-scholarship-how-i-did-it-bf590bea7692">HOW TO WIN THE BENJAMIN GILMAN SCHOLARSHIP?</a></h4>
                 <p class="separator">The scholarship that started my travel journey to Paris, France.
+                </p>
+
+              </div>
+
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6">
+            <div class="journal-info">
+
+              <a href="https://cheapmillennialtravel.blogspot.com/"><img src="images/Screen Shot 2018-11-28 at 12.27.50 PM.png" class="img-responsive" alt="img"></a>
+
+              <div class="journal-txt">
+
+                <h4><a href="https://cheapmillennialtravel.blogspot.com/">MILLENIAL CHEAP TRAVEL TIPS</a></h4>
+                <p class="separator">Travel blog that gives you insight into cheap travel tips to places around the world.
                 </p>
 
               </div>
