--- a/index.html
+++ b/index.html
@@ -104,8 +104,11 @@
         <div class="col-lg-7">
           <div class="about-descr">
 
-            <p class="p-heading">I am an aspiring web developer with a background in business. I earned my Bachelor of Science in Business Administration at the University of North Carolina at Greensboro. </p>
-            <p class="separator">I love to travel and discovering new culture, food and people. I've been to 4 continents, 10 countries and I hope to find another. You can find some of my blog post below.</p>
+            <p class="p-heading">I am an aspiring web developer with a background in business.</p>
+            <p class="separator"> I earned my Bachelor of Science in Business Administration at the University of North Carolina at Greensboro. 
+              I love to travel and discover new culture, food and people. I've been to 4 continents, 10 countries during my studies and hope to travel to many more.
+              You can find some of my blog post below with some personal experience and travel tips. Please don't hesitate to connect with me on Linkedin.
+            I look forward to connecting with you.</p>
 
           </div>
 
@@ -205,20 +208,29 @@
           </div>
 
           <div class="portfolio-container">
+              <div class="col-lg-4 col-md-6 portfolio-thumbnail all branding uikits webdesign">
+                  <a class="link" href="http://desolate-hamlet-84600.herokuapp.com/">
+                    iDecide<img src="images/Screen Shot 2018-11-18 at 10.56.36 PM.png" alt="img">
+                  </a>
+                  <a class="link" href="https://github.com/qbnguyen/TheCrimsonKnuckleRepo">Link to GitHub</a>
+                </div>
 
+
+          <div class="col-lg-4 col-md-6 portfolio-thumbnail all mockups uikits webdesign">
+                    <a class="link" href="https://guarded-retreat-43470.herokuapp.com/">
+                      Eat That Burger!<img src="images/Screen Shot 2018-12-02 at 9.18.22 PM.png" alt="img">
+                    </a>
+                    <a class="link" href="https://github.com/qbnguyen/burger">Link to GitHub</a>
+                  </div>
+
+              
             <div class="col-lg-4 col-md-6 portfolio-thumbnail all branding uikits webdesign">
               <a class="link" href="https://raianazaman.github.io/project/">
                 Tech Solution<img src="images/Screen Shot 2018-09-27 at 9.33.55 PM.png" alt="img">
               </a>
               <a class="link" href="https://github.com/qbnguyen/project">Link to GitHub</a>
             </div>
-          
-            <div class="col-lg-4 col-md-6 portfolio-thumbnail all branding uikits webdesign">
-              <a class="link" href="http://desolate-hamlet-84600.herokuapp.com/">
-                iDecide<img src="images/Screen Shot 2018-11-18 at 10.56.36 PM.png" alt="img">
-              </a>
-              <a class="link" href="https://github.com/qbnguyen/TheCrimsonKnuckleRepo">Link to GitHub</a>
-            </div>
+
             <div class="col-lg-4 col-md-6 portfolio-thumbnail all mockups uikits webdesign">
               <a class="link" href=" https://qbnguyen.github.io/GIPHY-API/">
                 GIPHY World<img src="images/Screen Shot 2018-09-27 at 9.46.12 PM.png"  alt="img">
@@ -232,6 +244,10 @@
               </a>
               <a class="link" href="https://github.com/qbnguyen/Firebase-TrainScheduler">Link to GitHub</a>
             </div>
+
+
+
+
 
             <div class="col-lg-4 col-md-6 portfolio-thumbnail all branding uikits photography">
               <a class="popup-img" href="images/IMG_0726.jpg">
