submit form added

--- a/index.html
+++ b/index.html
@@ -393,7 +393,6 @@
               <h2 class="mb-30">LET'S CONNECT</h2>
 
               <ul class="contact-details">
-                <li><span>1300 Tribute Center Dr</span></li>
                 <li><span>Raleigh NC, United States</span></li>
                 <li><span>+1(910)364-2985</span></li>
                 <li><span>nguyenqb24@gmail.com</span></li>
@@ -403,6 +402,7 @@
           </div>
 
           <div class="col-lg-6">
+              <form action="https://formspree.io/nguyenqb24@gmail.com" method="POST">
             <form action="" method="post" role="form" class="contactForm">
               <div class="row">
 
