--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         <div class="col-lg-4 ">
           <div class="div-img-bg">
             <div class="about-img">
-              <img src="images/IMG_4406.jpg" class="img-responsive" alt="me">
+              <img src="images/UNADJUSTEDNONRAW_thumb_1d45.jpg" class="img-responsive" alt="me">
             </div>
           </div>
         </div>
