--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
         <div class="col-lg-7">
           <div class="about-descr">
 
-            <p class="p-heading">I am an aspiring web developer with a background in business.</p>
+            <p class="p-heading">First Year MBA Candidate studying Innovation Technology Management</p>
             <p class="separator"> I earned my Bachelor of Science in Business Administration at the University of North Carolina at Greensboro. 
               I love to travel and discover new culture, food and people. I've been to 4 continents, 10 countries during my studies and hope to travel to many more.
               You can find some of my blog post below with some personal experience and travel tips. Please don't hesitate to connect with me on Linkedin.
