--- a/index.html
+++ b/index.html
@@ -104,14 +104,21 @@
         <div class="col-lg-7">
           <div class="about-descr">
 
-            <p class="p-heading">First Year MBA Candidate studying Innovation Technology Management</p>
-            <p class="separator"> I earned my Bachelor of Science in Business Administration at the University of North Carolina at Greensboro. 
-              I love to travel and discover new culture, food and people. I've been to 4 continents, 10 countries during my studies and hope to travel to many more.
-              You can find some of my blog post below with some personal experience and travel tips. Please don't hesitate to connect with me on Linkedin.
+            <p class="p-heading">About Me</p>
+            <p class="separator"> I earned my Bachelor of Science in Business Administration at the University of North Carolina at Greensboro.
+              Currently, I am pursuing my MBA at North Carolina State University concentrating in Innovation Technology Management. Although my previous experience is in
+              operation management, I later discovered my passion for technology through a web development course. I enjoy learning and taking on challenges. 
+              I love to travel and discover new culture, food and people. I've been to 4 continents, 10 countries during my studies and hope to travel to many more during my career.
+              I would like to combine my business management experience as well as course work to pursue a career in the tech industry.
+              You can find some of my projects, blog post below with some personal experience and travel tips. Please don't hesitate to connect with me on Linkedin.
             I look forward to connecting with you.</p>
-
-            
-
+            <break></break>
+              <p>
+                                  Best,
+                                Quy B Nguyen
+              </p>
+            <break></break>
+              <img src="images/NCStateJenkinsMBA.png">
           </div>
 
         </div>
@@ -218,7 +225,7 @@
                   <a class="popup-img" href="images/Screen Shot 2019-09-23 at 10.36.53 PM.png">
                       Resume<img src="images/Screen Shot 2019-09-23 at 10.36.53 PM.png" alt="img">
                     </a>
-                    <a class="link" href="NguyenQuy MBA Resume.pdf">Click to View</a>
+                    <a class="link" href="NguyenQuy MBA Resume.pdf">Click to View and Download</a>
                   </div>
 
               <div class="col-lg-4 col-md-6 portfolio-thumbnail all uikits webdesign">
