about me updated

--- a/index.html
+++ b/index.html
@@ -110,12 +110,13 @@
               operation management, I later discovered my passion for technology through a web development course. I enjoy learning and taking on challenges. 
               I love to travel and discover new culture, food and people. I've been to 4 continents, 10 countries during my studies and hope to travel to many more during my career.
               I would like to combine my business management experience as well as course work to pursue a career in the tech industry.
-              You can find some of my projects, blog post below with some personal experience and travel tips. Please don't hesitate to connect with me on Linkedin.
+              You can find some of my projects and blog post below, along with personal experience and travel tips. Please don't hesitate to connect with me on Linkedin.
             I look forward to connecting with you.</p>
             <break></break>
               <p>
                                   Best,
-                                Quy B Nguyen
+                                  <break>Quy B Nguyen</break>
+                                
               </p>
             <break></break>
               <img src="images/NCStateJenkinsMBA.png">
